support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_template_nargs.i
%module xxx

template<typename T> T blah(T x) { };

%template(blahi) blah<int,double>;
%template(blahf) blah<>;




